--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
                 <li>
                     <a href="">
                         <figure class="nav-cubix">
-                            <img src="/cubix.png" alt="cubix">
+                            <img src="/img/cubix.png" alt="cubix">
                         </figure>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <figure class="nav-user">
-                            <img src="/ttpng.png" alt="iconoUser">
+                            <img src="/img/ttpng.png" alt="iconoUser">
                         </figure>
                     </a>
                 </li>
