--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Google</title>
 </head>
 <body>
-    <header class="header">
+    <header>
         <nav>
             <ul class="nav-list">
                 <li>
